# matrix-registration-bot

./: .dockerignore  .gitignore  Changelog.md  Dockerfile  README.md  README.rst  bot.py  example_config.yml  pyproject.toml  registration_api.py  requirements.py  requirements.txt  setup.py
contrib/: Dockerfile
contrib/ansible-role/: README.md
contrib/ansible-role/meta/: main.yml
contrib/ansible-role/tasks/: main.yml  setup_uninstall.yml  validate_config.yml
contrib/ansible-role/templates/: config.yml.j2  matrix-registration-bot.service.j2
contrib/docker/: Dockerfile  TestDocker
docs/: releases.md  troubleshooting.md
matrix-registration-bot/: bot.py
matrix_registration_bot/: __init__.py  bot.py  config.py  registration_api.py
src/matrix_registration_bot/: bot.py  registration_api.py
tests/: test_registration_api.py
